--- a/autenticacao/templates/cadastro.html
+++ b/autenticacao/templates/cadastro.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
+{% block 'head' %}
+    <link rel="stylesheet" href="{% static 'autenticacao/css/cadastro.css' %}">
+{% endblock %}
+
 {% block 'titulo' %}Cadastre-se{% endblock %}
 
 {% block 'body' %}
@@ -9,7 +15,7 @@
             <div class="col-md-3 sidebar">
                 <div class="logo_sidebar">                    
                     <h2 class="logo">
-                        <img class="img_logo_sidebar" src="">
+                        <img class="img_logo_sidebar" src="{% static 'autenticacao/img/logo_nutri_lab.png'%}">
                     </h2>
                 </div>                
             </div>
@@ -20,7 +26,8 @@
                     <p class="sub-titulo">Crie sua conta</p>
                     <hr>
                     
-                    <form action="" method="">
+                    <form action="{% url 'autenticacao:cadastro' %}" method="POST">
+                        {% csrf_token %}
                         <span class="bold">Nome de usuário</span>
                         <input class="form-control input-form" name="usuario" type="text" placeholder="Digite seu nome...">
                         <br>
